# sonar

./: .gitignore  CLAUDE.md  README.md
app/: .gitignore  Info.plist  Package.swift  build-app.sh
app/Sources/SonarApp/: AppDelegate.swift  Config.swift  HealthPoller.swift  NotesBackend.swift  NotesURLWatcher.swift  NotesWindowController.swift  PopoverHTML.swift  ServiceProbe.swift  StatusItemController.swift  main.swift
config/: .env.example  README.md
docs/: DECISIONS.md  PRD.md  RESEARCH.md
harness/: CONTRACTS.md  README.md  pyproject.toml
harness/config/: charter.md  models.yaml  tool_permissions.yaml
harness/sonar_harness/: __init__.py  __main__.py  agent.py  doctor.py  events.py  google_auth.py  model_router.py  ollama_client.py  prompt.py  scheduler.py  server.py  state.py  toolcall.py
harness/sonar_harness/tools/: __init__.py  base.py  calendar_read.py  calendar_write.py  daily_brief.py  gmail_read.py  note_capture.py  rag_backend.py  rag_tools.py  state_read.py  todo_add.py  todo_done.py  todo_list.py  web_search.py
harness/spikes/: gemma_toolcall_spike.py
harness/tests/: test_agent_escalation.py  test_daily_brief.py  test_doctor.py  test_external_tools.py  test_model_router.py  test_note_capture.py  test_scheduler.py  test_sse.py  test_todo_db.py  test_todo_list.py  test_toolcall.py
infra/searxng/: .gitignore  docker-compose.yml  settings.template.yml  up.sh
mcp/: README.md
overlay/: README.md  bridge.py  test_bridge.py
rag/: .gitignore  LICENSE  README.md  VENDORED.md  prd.md  pyproject.toml
rag/evals/: .gitignore  README.md  config.example.yaml  golden.example.json  run_eval.py
rag/src/obsidian_rag/: __main__.py  cli.py  config.py  indexer.py  markdown_parser.py  models.py  retriever.py  server.py  tools.py  watcher.py  wikilinks.py
rag/src/obsidian_rag/daily_format/: __init__.py  detector.py  formatter.py  launchd.py  model_select.py  power.py  queue.py  runner.py  tags.py  trigger.py
rag/tests/: conftest.py  test_chunking.py  test_cli.py  test_config.py  test_daily_detector.py  test_daily_format_config.py  test_daily_formatter.py  test_daily_runner.py  test_daily_tags.py  test_format_queue.py  test_format_trigger.py  test_indexer.py  test_launchd.py  test_mcp_integration.py  test_model_select.py  test_multi_vault.py  test_note_context.py  test_power.py  test_reranker.py  test_retrieval.py  test_server_startup.py  test_tool_config.py  test_tools.py  test_watcher.py  test_wikilinks.py
rag/tests/fixtures/sample_vault/: code-heavy.md  malformed-frontmatter.md  no-headings.md  wikilinks-callouts.md  wsn-pipeline.md
rag/tests/fixtures/sample_vault/daily/: 2024-01-15.md
rag/tests/fixtures/sample_vault/projects/: wsn-pipeline.md
rag/tests/fixtures/sample_vault_b/: vault-b-note.md
scripts/: README.md  morning_brief.py  sonar.sh
scripts/hotkey/: README.md  com.sonar.hotkey-remap.plist  doctor.sh  install.sh  remap.sh  uninstall.sh  unmap.sh
scripts/launchd/: com.sonar.bridge.plist  com.sonar.harness.plist  com.sonar.morning-brief.plist  com.sonar.voice.plist
spike/: README.md
spike/glow/: README.md  gen_vignette.py  init.lua  stub_server.py
state/: README.md  schema.sql
voice/: .gitignore  LICENSE  README.md  VENDORED.md  acks.py  audio_io.py  echo_gate.py  harness_client.py  history.py  pyproject.toml  stt_bridge.py  voice_loop.py
voice/clients/web/: capture-worklet.js  index.html  playback-worklet.js
voice/notes/: __init__.py  __main__.py  controller.py  diarize.py  embed.py  intent.py  server.py  session.py  store.py  summarize.py  ui.html
voice/osvoice/: __init__.py  aggregator.py  app.py  audio.py  cli.py  contracts.py  metrics.py  pipeline.py  registry.py  runtime.py  transport_ws.py  vad.py
voice/osvoice/providers/: __init__.py  llm_mlx.py  llm_ollama.py  llm_openai.py  parakeet.py  stt_mlxaudio.py  tts_kokoro.py  tts_mlxaudio.py
voice/tests/: conftest.py  test_acks.py  test_aggregator.py  test_audio_io.py  test_echo_gate.py  test_harness_client.py  test_history.py  test_notes_controller.py  test_notes_diarize.py  test_notes_intent.py  test_notes_main.py  test_notes_server.py  test_notes_session.py  test_notes_store.py  test_notes_summarize.py  test_pipeline.py  test_resolve.py  test_runtime.py  test_transport.py  test_vad.py  test_voice_loop_notes.py  test_voice_loop_say.py
workers/: README.md
workers/brief_builder/: README.md  com.sonar.brief-builder.plist  install.sh  pyproject.toml  uninstall.sh
workers/brief_builder/src/brief_builder/: __init__.py  __main__.py  brief.py  config.py  db.py  gather.py  llm.py  vault.py
workers/brief_builder/tests/: conftest.py  test_brief.py  test_compose.py  test_db.py  test_gather.py  test_vault.py
