[project]
name = "obsidian-rag"
version = "0.1.0"
description = "MCP server for semantic search over Obsidian vaults"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=3.1.1",
    "click>=8.3.1",
    "pydantic>=2.12.0",
    "pyyaml>=6.0.3",
    "ollama>=0.6.1",
    "faiss-cpu>=1.7.4",
    "python-frontmatter>=1.1.0",
    "numpy>=2.4.3",
    "watchdog>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
]

[project.urls]
Repository = "https://github.com/navindasg/ObsidianRagMCP"

[project.scripts]
obsidian-rag = "obsidian_rag.cli:cli"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "--cov=obsidian_rag --cov-report=term-missing"

[tool.coverage.run]
source = ["src/obsidian_rag"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
]
