[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "osvoice"
version = "0.1.0"
description = "Local, provider-agnostic voice-to-voice agent server for Apple Silicon"
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = { text = "MIT" }
authors = [{ name = "osvoice" }]
keywords = ["voice", "stt", "tts", "llm", "mlx", "apple-silicon", "realtime"]

dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "typer>=0.12",
  "httpx>=0.27",
  "numpy>=1.26",
  "anyio>=4.4",
  "ollama>=0.4",
  "mlx>=0.18",
  "mlx-lm>=0.18",
  "parakeet-mlx==0.5.2",
  "mlx-audio[tts]==0.4.5",   # 0.4.5 fixes a Kokoro vocoder broadcast crash
  "misaki[en]>=0.7",        # Kokoro G2P (English extra pulls num2words/spacy)
  "silero-vad==6.2.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "pytest-cov>=5.0",
  "websockets>=13",   # notes/server.py round-trip tests (runtime dep of voice_loop)
]

[project.scripts]
osvoice = "osvoice.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["osvoice"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-q"

[tool.coverage.run]
# Provider adapters need Apple-Silicon hardware + pulled models, so they are
# excluded from coverage; the pure-logic core (resolver/aggregator/vad/pipeline)
# is what we hold to the 80% bar.
source = ["osvoice"]
omit = ["osvoice/providers/*"]
